--- a/.github/workflows/transport.yaml
+++ b/.github/workflows/transport.yaml
@@ -122,5 +122,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: MESSAGEix-Transport
-        path: ${{ github.workspace }}/report/
+        path: |
+          ${{ github.workspace }}/report/
+          !${{ github.workspace }}/report/cache/
         if-no-files-found: error
