--- a/.github/workflows/transport.yaml
+++ b/.github/workflows/transport.yaml
@@ -82,12 +82,12 @@ jobs:
     # To run against unreleased code (on `main`, or other branches for open
     # PRs), temporarily uncomment the lines below and edit as appropriate.
     # DO NOT merge such changes to `main`.
-    - name: Force upgrade to unreleased dependencies
-      run: |
-        pip install --upgrade "genno @ git+https://github.com/khaeru/genno.git@enh/2023-W26"
-        # pip install --upgrade "ixmp @ git+https://github.com/iiasa/ixmp.git@main"
-        # pip install --upgrade "message_ix @ git+https://github.com/iiasa/message_ix.git@main"
-        # pip install --upgrade "message-ix-models @ git+https://github.com/iiasa/message-ix-models.git@main"
+    # - name: Force upgrade to unreleased dependencies
+    #   run: |
+    #     # pip install --upgrade "genno @ git+https://github.com/khaeru/genno.git@main"
+    #     # pip install --upgrade "ixmp @ git+https://github.com/iiasa/ixmp.git@main"
+    #     # pip install --upgrade "message_ix @ git+https://github.com/iiasa/message_ix.git@main"
+    #     # pip install --upgrade "message-ix-models @ git+https://github.com/iiasa/message-ix-models.git@main"
 
     - name: Configure
       run: |
