--- a/message_ix_models/data/transport/technology.yaml
+++ b/message_ix_models/data/transport/technology.yaml
@@ -26,7 +26,7 @@ HFC_ptrp:
 IAHe_ptrp:
   description: >-
     Hybridized internal combustion engine light-duty vehicle using biofuels
-  input: {commodity: lightoil}
+  input: {commodity: ethanol}
   message-v-report: LDV_EHYB
 
 IAHm_ptrp:
