Note difference between ldv cap and act units

--- a/message_ix_models/data/transport/technology.yaml
+++ b/message_ix_models/data/transport/technology.yaml
@@ -321,6 +321,7 @@ LDV:
   by_consumer_group: true
   child: [ELC_100, HFC_ptrp, IAHe_ptrp, IAHm_ptrp, ICAe_ffv, ICAm_ptrp,
     ICE_conv, ICE_L_ptrp, ICE_nga, ICH_chyb, IGH_ghyb, PHEV_ptrp]
+  # Units of ACT; units of CAP are 10⁶ vehicle
   units: Gv km
 
 "transport {technology.id} load factor":
