--- a/message_ix_models/data/material/set.yaml
+++ b/message_ix_models/data/material/set.yaml
@@ -301,6 +301,7 @@ steel:
     - old_scrap_3
     - primary_material
     - secondary_material
+    - dummy_secondary_material
     - tertiary_material
     - final_material
     - useful_material
@@ -318,6 +319,9 @@ steel:
     - pellet_steel
     - bf_steel
     - dri_steel
+    - dri_gas_steel
+    - dri_h2_steel
+    - sr_steel
     - bof_steel
     - eaf_steel
     - prep_secondary_steel_1
