Generate freight road conversion data in .freight
- disable in .data.conversion().
- update technology and commodity ids.

--- a/message_ix_models/data/transport/set.yaml
+++ b/message_ix_models/data/transport/set.yaml
@@ -102,8 +102,17 @@ commodity:
       demand: true
       units: Gt km
 
+    transport freight road:
+      name: Freight transport by road
+      demand: true
+      units: Gt km
+
     transport freight vehicle:
       name: Freight transport vehicle distance travelled
+      units: Gv km
+
+    transport freight road vehicle:
+      name: Freight transport by road vehicle distance travelled
       units: Gv km
 
     transport pax:
