Improve .demand.tasks
- use more predefined keys and genno "+".
- replace demand_ixmp0 with new "relabel2" operator and atomic steps.
- correct drop=true usage of genno.operator.select().
- add reference freight activity data from file; disable from advance.

--- a/message_ix_models/data/transport/set.yaml
+++ b/message_ix_models/data/transport/set.yaml
@@ -205,6 +205,7 @@ unit:
     Gp * km / a / v: 10⁹ passenger-kilometre per vehicle-year
     Gp km: 10⁹ passenger-kilometre
     Gp km / a: 10⁹ passenger-kilometre per year
+    Gp * km / a: 10⁹ passenger-kilometre per year
     Gp / Gv: passengers per vehicle
     Gt km: 10⁹ tonne-kilometre
     Gt * km: 10⁹ tonne-kilometre
