--- a/message_ix_models/data/material/set.yaml
+++ b/message_ix_models/data/material/set.yaml
@@ -302,7 +302,6 @@ steel:
     - old_scrap_3
     - primary_material
     - secondary_material
-    - dummy_secondary_material
     - tertiary_material
     - final_material
     - useful_material
@@ -363,17 +362,23 @@ steel:
     add:
       - bf_ccs_steel
       - dri_gas_ccs_steel
+      - dri_gas_steel
+      - dri_h2_steel
   type_addon:
     add:
       - ccs_steel
+      - dri_steel
   map_tec_addon:
     add:
       - [bf_steel, ccs_steel]
       - [dri_gas_steel, ccs_steel]
+      - [dri_steel, dri_steel]
   cat_addon:
     add:
       - [ccs_steel, bf_ccs_steel]
       - [ccs_steel, dri_gas_ccs_steel]
+      - [dri_steel, dri_gas_steel]
+      - [dri_steel, dri_h2_steel]
 
 cement:
   commodity:
