--- a/.github/workflows/transport.yaml
+++ b/.github/workflows/transport.yaml
@@ -136,7 +136,7 @@ jobs:
         # pip install --upgrade "genno @ git+https://github.com/khaeru/genno.git@main"
         pip install --upgrade "ixmp @ git+https://github.com/iiasa/ixmp.git@main"
         pip install --upgrade "message_ix @ git+https://github.com/iiasa/message_ix.git@main"
-        # pip install --upgrade "message-ix-models @ git+https://github.com/iiasa/message-ix-models.git@main"
+        pip install --upgrade "message-ix-models @ git+https://github.com/iiasa/message-ix-models.git@main"
 
     # #####
 
