Distinguish artifact names in "transport" ci workflow
- actions/upload-artifact v4 requires unique names.
- add continue-on-error: true to allow other jobs to continue even if
  this step fails.

--- a/.github/workflows/transport.yaml
+++ b/.github/workflows/transport.yaml
@@ -180,8 +180,9 @@ jobs:
     - name: Upload results as a build artifact
       uses: actions/upload-artifact@v4
       with:
-        name: MESSAGEix-Transport
+        name: MESSAGEix-Transport ${{ matrix.SSP }}
         path: |
           ${{ github.workspace }}/report/
           !${{ github.workspace }}/report/cache/
         if-no-files-found: error
+      continue-on-error: true
