--- a/message_ix_models/data/material/set.yaml
+++ b/message_ix_models/data/material/set.yaml
@@ -284,7 +284,7 @@ steel:
     - steel
     - pig_iron
     - pig_iron_dummy
-    - off_gas
+    - charcoal
     - sponge_iron
     - sinter_iron
     - pellet_iron
@@ -294,6 +294,7 @@ steel:
     - slag_iron
     - co_gas
     - bf_gas
+    - off_gas
 
   level:
     add:
@@ -343,6 +344,7 @@ steel:
     - other_EOL_steel
     - total_EOL_steel
     - bf_biomass_steel
+    - prod_charcoal_steel
 
   relation:
     add:
