Temporarily run only ssp2 in "transport" ci workflow

--- a/.github/workflows/transport.yaml
+++ b/.github/workflows/transport.yaml
@@ -56,11 +56,11 @@ jobs:
     strategy:
       matrix:
         SSP:
-        - SSP1
+        # - SSP1
         - SSP2
-        - SSP3
-        - SSP4
-        - SSP5
+        # - SSP3
+        # - SSP4
+        # - SSP5
 
     name: MESSAGEix-Transport ${{ matrix.SSP }}
 
