Store a version of r12/energy-other.csv with pipeline included

--- a/message_ix_models/data/transport/technology.yaml
+++ b/message_ix_models/data/transport/technology.yaml
@@ -426,4 +426,7 @@ OTHER:
   - transport other gas
   - transport other lightoil
   units: GWa
-  iea-eweb-flow: [DOMESNAV, TRNONSPE]
+  iea-eweb-flow:
+  - DOMESNAV
+  # - PIPELINE
+  - TRNONSPE
